2002-12-19  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-12-18  Havoc Pennington  <hp@redhat.com>

	* src/window.c (meta_window_new): select ColormapChangeMask 
	on toplevel windows, maybe a partial fix for #101478

Tue Dec 17 17:50:19 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* src/themes/AgingGorilla/metacity-theme-1.xml: added support for
	border only windows. #100984.

2002-12-17  Havoc Pennington  <hp@pobox.com>

	* src/display.c (meta_display_begin_grab_op): don't use "(null)"
	for null pointers, use "none", so I can distinguish
	glibc-generated (null) which is a bug.
	(key_event_description): ditto
	(meta_display_begin_grab_op): ditto

	* src/window.c (update_sm_hints): ditto

	* src/keybindings.c (reload_modmap): ditto
	(meta_display_process_key_event): ditto
	
2002-12-17  Havoc Pennington  <hp@pobox.com>

	* src/metacity.schemas.in: s/focussed/focused/

2002-12-17  Havoc Pennington  <hp@pobox.com>

	* src/xprops.c (validate_or_free_results): add a comma to message #101401

2002-12-16 Bill Haneman <bill.haneman@sun.com>
   
	* configure.in:
	Check for XKB extension.

	* src/Makefile.am: 
	Added bell.c and bell.h to metacity sources.

	* src/common.h:
	(MetaFrameFlags):
	Added META_FRAME_IS_FLASHING flag.

	* src/frame.h:
	(MetaFrame): Added is_flashing field.
	
	* src/frame.c:
	(meta_window_ensure_frame):
	Initialize the is_flashing flag to FALSE.
	(meta_frame_get_flags):
	Handle the FRAME_IS_FLASHING flag.
	(meta_window_destroy_frame):
	Call meta_bell_notify_frame_destroy.
	
	* src/prefs.h:
	(MetaPreference):
	Added META_PREF_VISUAL_BELL, META_PREF_AUDIBLE_BELL,
	META_PREF_VISUAL_BELL_TYPE.
	(MetaVisualBellType): New enum.
	(meta_prefs_get_visual_bell, meta_prefs_bell_is_audible): 
	(meta_prefs_get_visual_bell_type): 
	New accessor declarations.
	
	* src/prefs.c:
	(#includes): Include "display.h", since we now call
	meta_displays_list() in our update func.
	(#defines):