@@ -1,3 +1,7 @@
+2002-12-19  Havoc Pennington  <hp@pobox.com>
+
+	* Reverted visual bell patch, #99886
+
 2002-12-19  Yanko Kaneti <yaneti@declera.com>
 
 	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).
